@@ -4,6 +4,10 @@
 
 
 
+2021-07-22 -> ## lcd2004_i2c stuff
+	      add first part to setup a ctrl thread which handles correct
+	      shutdown of the lcd (clear lcd ...)
+
 2021-07-15 -> ## repo stuff
               add description for the rtc pcb changes
               documentation updates
